[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Bosses/Seer/Seer.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Bosses/Seer/Seer.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 80.0

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 80.0

[node name="Seer" type="KinematicBody2D" index="0" groups=[
"Enemy",
]]

scale = Vector2( 0.75, 0.75 )
input_pickable = false
collision_layer = 4
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="origin" type="Position2D" parent="Sprite" index="0"]

position = Vector2( -3.59393, -3.07878 )
scale = Vector2( 0.142857, 0.142857 )

[node name="shockpos" type="Position2D" parent="Sprite" index="1"]

position = Vector2( -13.3333, 13.3333 )
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Shoot" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.35
one_shot = false
autostart = false

[node name="HitBox" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" index="0"]

shape = SubResource( 2 )

[node name="Anim" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
blend_times = [  ]

[node name="JumpTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[connection signal="timeout" from="Shoot" to="." method="_on_Shoot_timeout"]

[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]


